--- a/style/main.css
+++ b/style/main.css
@@ -17,8 +17,6 @@ h3{
     font-size: 2rem;
 }
 
-
-
 #header{
     text-align: center;
     margin-top: 30px;  
@@ -40,7 +38,7 @@ h3{
     flex-direction: row;
 }
 
-#mainSection{
+section{
     width:70%;
     margin: 0 auto;
     margin-top: 45px;
@@ -50,6 +48,10 @@ h3{
 #mainSection #aboutme{
     width:30%;
     text-align: left;
+}
+
+#mainSection #aboutme h3{
+    margin-bottom: 40px;
 }
 
 #mainSection img{
@@ -64,6 +66,10 @@ h3{
     text-align: left;
 }
 
+#mainSection #details div a img{
+    width:32px;
+}
+
 #mainSection #details h3{
     margin-bottom: 40px;
 }
@@ -74,4 +80,31 @@ h3{
 
 .bold{
     font-weight: bold;
+}
+
+.invisible{
+    opacity: 0
+}
+
+#skills{
+    flex-direction: column;
+    text-align: center;
+    flex-wrap: wrap;
+    margin-bottom: 35px;
+    margin-top: 35px;
+}
+
+#skills img{
+    margin: 10px;
+    border: 1px solid transparent;
+}
+
+#skills img:hover{
+    border: 1px solid black; 
+    border-radius: 10px;
+    
+}
+
+a{
+    text-decoration: none;
 }
