--- a/style/main.css
+++ b/style/main.css
@@ -57,7 +57,7 @@ section{
 #mainSection img{
     border-radius: 100%;
     width: 30%;
-    height: auto;
+    height: fit-content;
     margin: 4.89%;
 }
 
