Atualizando componente de i18n para ultima versão

--- a/style/main.css
+++ b/style/main.css
@@ -113,3 +113,14 @@ svg {
     height:30px !important;
     width:30px !important;
 }
+
+
+#switch-description {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
